<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.skywolfxp</groupId>
  <artifactId>discord-channel-html-transcript</artifactId>
  <version>1.0.1</version>

  <name>discord-channel-html-transcript</name>
  <description>
    Java library for generating Discord-like HTML transcripts, Using Java Discord API &amp; Java Template Engine
  </description>
  <url>https://github.com/SkyWolfXP/discord-channel-html-transcript</url>

  <licenses>
    <license>
      <name>CC BY-SA 4.0</name>
      <url>https://creativecommons.org/licenses/by-sa/4.0/</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>SkyWolfXP</name>
      <email>skywolfxp@gmail.com</email>
      <organization>Github</organization>
      <organizationUrl>https://github.com/SkyWolfXP</organizationUrl>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git://github.com/SkyWolfXP/discord-channel-html-transcript.git</connection>
    <developerConnection>
      scm:git:ssh://git@github.com:SkyWolfXP/discord-channel-html-transcript.git
    </developerConnection>
    <url>https://github.com/SkyWolfXP/discord-channel-html-transcript</url>
  </scm>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jte.version>3.2.0</jte.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>net.dv8tion</groupId>
      <artifactId>JDA</artifactId>
      <version>5.3.2</version>

      <exclusions>
        <exclusion>
          <groupId>club.minnced</groupId>
          <artifactId>opus-java</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>gg.jte</groupId>
      <artifactId>jte</artifactId>
      <version>${jte.version}</version>
    </dependency>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.5.18</version>

      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.13.0-M2</version>

      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>5.17.0</version>

      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.0</version>

        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.11.2</version>

        <executions>
          <execution>
            <id>attach-javadocs</id>

            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.3.1</version>

        <executions>
          <execution>
            <id>attach-sources</id>

            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>3.2.7</version>

        <executions>
          <execution>
            <id>sign-artifacts</id>

            <phase>verify</phase>

            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>0.7.0</version>

        <extensions>true</extensions>

        <configuration>
          <publishingServerId>central</publishingServerId>
          <autoPublish>true</autoPublish>
        </configuration>
      </plugin>

      <plugin>
        <groupId>gg.jte</groupId>
        <artifactId>jte-maven-plugin</artifactId>
        <version>${jte.version}</version>
        <configuration>
          <contentType>Html</contentType>
          <binaryStaticContent>true</binaryStaticContent>
          <sourceDirectory>${project.basedir}/src/main/resources/template</sourceDirectory>
          <targetDirectory/>
        </configuration>
        <executions>
          <execution>
            <phase>generate-sources</phase>
            <goals>
              <goal>generate</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>

        <configuration>
          <argLine>-XX:+EnableDynamicAgentLoading</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>